# qinfo3

./: Makefile.in  configure  configure.ac
data/: Makefile.in
data/desktop/: Makefile.in
data/ui/: Makefile.in  about.glade  about.xml  main.glade  main.xml  preferences.glade  preferences.xml
src/: Makefile.am  Makefile.in  callbacks.c  callbacks.h  settings.c  window.c
